[b]Version 0.6.0rc1 (not released yet)[/b]:

(2008-01-08)
 * Added an icon for Help->FAQ (faq.png).
 * Added an icon for Help->About Qt. The icon has been taken from the Qt
   sources (qmessagebox.cpp). This icon can't be changed by any icon theme
   (I don't think Trolltech would like it).

(2008-01-06)
 * The subtitles size will increase or decrease in steps of 1 instead of
   0.2 if using SSA/ASS lib (it requires restart mplayer, which is slower).

(2008-01-04)
 * Fixed a crash which may happen if trying to select a subtitle but
   the subtitle list was empty.

(2008-01-03)
 * Now the GPL in English is in html too. From now on, all documents
   that smplayer have to load should be in html. This is because the
   debian packager compress all txt files, and so smplayer won't able
   to find them.
 * The file FAQ.txt has been moved to docs/en and converted to html.
 * New option Help->FAQ, which will display the FAQ in your web browser.

(2008-01-02)
 * Added a function to get the path of a translatable document. The 
   translatable documents should be (in the sources) in the docs subdir.
 * Now the GPL file is loaded from that path.
 * Added the Spanish and German translation of the GPL v2.

(2007-12-31)
 * Now the QTextBrowsers really should have the same background color as the
   near widgets.
 * Now the about dialog can show the version number of mplayer.
 * The about dialog displays the GPL in the license tab. Temporary the file
   with the GPL text is embedded in the smplayer executable. In the future it
   will be read from documentation directory.

(2007-12-30)
 * Replaced the QLabels and QTextEdits in the about dialog with QTextBrowsers,
   and changed the background colors.

(2007-12-29)
 * Split the section "Video and audio" in Preferences->General into 2 sections.
 * Added 3 icons in the about dialog (contributors.png, translators.png and 
   license.png), taken from Crystal Clear.